# r2ai

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  autogen.sh  main.py  make.bat  pyproject.toml  r2ai-server  r2ai.r2  r2ai.sh  requirements.txt  run-venv.sh  setup.py
.github/workflows/: build-release.yml  ci.yml  releases.yml
Attic/: llmcom.py  nl.py  nltk.py  pancake-vdb.swift  vdb.ts
Attic/examples/: gitci.py  r2test.py  scrap-ddg.sh  scrap-web.sh  scrap-yt.sh  srcdoc.r2.js  substitute
Attic/examples/benchmark/: index.sh
Attic/examples/disasm-poc/: train.r2
Attic/examples/native/cxx/: main.cpp  sampling.cpp
Attic/py/: Makefile  pyproject.toml  r2ai.1
Attic/py/r2ai/: code_block.py  env.py  index.py  interpreter.py  pipe.py  voice.py
Attic/py/r2ai/backend/: bedrock.py  kobaldcpp.py
Attic/server/: Makefile  README.md
c/: Makefile  main.c
c/client/: Makefile
c/cxx/: Makefile  common.cpp  main.cpp  r2ai.cpp  sampling.h
decai/: AGENTS.md  Makefile  README.md  a.out  decai.r2.js  pipeline.json
decai/src/: Makefile  apiKeys.ts  commands.ts  config.ts  constants.ts  headers.ts  http.ts  httptask.md  main.ts  models.ts  providers.ts  r2ai.ts  r2pipe.ts  state.ts  tsconfig.json  types.ts  utils.ts
doc/: prompt-voice2cmd.md  prompts.txt  usage-kobold.md
doc/auto/: hints.txt
doc/data/: quotes.txt  r2frida.md  r2pipe.md  radare2.md  test.txt
doc/role/: apicall.txt  codedoc.txt  doctor.txt  dos-shell.txt  esil.txt  esil2c.txt  mastodon-cat.txt  mastodon.txt  picolecroco.txt  posix-shell.txt  r2clippy.txt  skynet.txt
doc/samples/: qcw.txt
examples/: Makefile  ai.sh  autocomment.py  benchmark_to_html.sh  explain.py  funcall.py  gemini.py  llama-vim.sh  podcast.sh  scrap-ddgweb.sh  scrap-web.sh  socialai.py  substitute.c  translator.txt
examples/benchmark/: Makefile  evaluate.sh  index.sh  run.sh
examples/benchmark/decai/: BENCH.txt
examples/benchmark/files/: CMPROMPT.txt  complex1.c  complex2.c  complex3.c
examples/disasm-poc/: Makefile  test.txt
examples/native/cxx/: r2ai.cpp
native/c/: main.c
native/client/: Makefile  client.c
native/cxx/: Makefile  main.cpp  r2ai.cpp
openapiproxy/: Makefile  server.ts  vdb.ts
prompts/: README.md  autoname.r2ai.md  autoname.r2ai.txt  compact.r2ai.md  decompile.r2ai.md  decompile.r2ai.txt  devices.r2ai.md  devices.r2ai.txt  dlopen.r2ai.md  dlopen.r2ai.txt  explain.r2ai.md  explain.r2ai.txt  libs.r2ai.md  libs.r2ai.txt  signature.r2ai.md  signature.r2ai.txt  tophp.r2ai.md  varnames.r2ai.md  varnames.r2ai.txt  vulns.r2ai.md  vulns.r2ai.txt
py/: Makefile  README.md
py/r2ai/: bubble.py  cli.py  const.py  main.py  models.py  plugin.py  progress.py  test.py  voice.py  web.py
py/r2ai/ui/: app.py  app.tcss  chat.py
r2ai/: __init__.py  anthropic.py  audio.py  auto.py  bubble.py  code_block.py  completion.py  config.py  const.py  get_hf_llm.py  index.py  interpreter.py  interpreter_base.py  large.py  main.py  message_block.py  models.py  partial_json_parser.py  pipe.py  plugin.py  progress.py  repl.py  spinner.py  tab.py  tools.py  utils.py  voice.py  web.py
r2ai-server/: Makefile  README.md  r2ai-server
r2ai/backend/: kobaldcpp.py  openapi.py
r2ai/databases/: base_db.py  repository.py  sqlite_db.py
r2ai/functionary/: schema.py
r2ai/functionary/prompt_template/: __init__.py  base_template.py  prompt_template_v1.py  prompt_template_v2.py
r2ai/r2clippy/: __init__.py  chat.py  chunks.py  constants.py  decorators.py  functions.py  llamachatcompletion.py  models.py  processors.py  schema.py  utils.py
r2ai/r2clippy/ais/: ai_openai.py  processors.py
r2ai/r2clippy/utils/: __init__.py  context.py  split_string.py
r2ai/ui/: app.py  app.tcss  chat.py  db.py  model_select.py  r2cmd.py
r2plugin/: Makefile  decai.r2.js  pdc-ai.r2.js
r2plugin/src/: coreplug.r2.js
server/: r2ai-server
src/: .clang-format  AGENTS.md  Makefile  README.md  anthropic.c  apikeys.c  async.c  auto.c  claw.c  gemini.c  http.c  http_curl.inc.c  http_libcurl.inc.c  http_pwsh.inc.c  http_r2.c  indent.py  json.c  llm.c  main.c  markdown.c  markdown.h  meson.build  meson_options.txt  messages.c  ollama.c  openai.c  openapi.c  query.c  r2ai.1  r2ai.c  r2ai.c.bak  r2ai.h  r2ai_anthropic.c  r2ai_gemini.c  r2ai_http.c  r2ai_openai.c  r2ai_openapi.c  r2ai_priv.h  r_vdb.h  rawtools.c  (+9 more)
src/http/: curl.inc.c  libcurl.inc.c  pwsh.inc.c  r2.inc.c
src/prompts/: README.md
wip/: nl.py
