[project]
name = "r2ai"
dynamic = ["readme"]
version = "0.8.6"
description = "Artificial intelligence tooling for radare2"

license = {text = "MIT License"}
authors = [
  {name = "pancake", email = "pancake@nopcode.org"}
]

dependencies = [
  "rich",
  "r2pipe",
  "inquirer",
  "llama-cpp-python==0.3.1",
  "huggingface_hub",
  "appdirs",
  "unidecode",
  "jsonref",
  "transformers",
  "pydantic",
  "pyreadline3",
  "tokentrim",
  "boto3",
  "colorama",
  "textual",
  "litellm",
  "numpydoc"
]

[project.optional-dependencies]
extras = [
  "chromadb",
  "openai",
  "anthropic",
  "groq",
  "google-generativeai",
  "google-cloud-aiplatform"
]


[project.urls]
homepage = "https://www.radare.org/"
repository = "https://github.com/radareorg/r2ai"

[project.scripts]
r2ai = "r2ai.main:run" 

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["r2ai*"]
namespaces = true

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

